# interier_ai

./: .env.example  .gitignore  README.md  docker-compose.yaml  main.py  playground.ipynb  pyproject.toml  run.sh
dataset/1_modern_minimalist/: prompt.md
dataset/2_industrial_loft/: prompt.md
dataset/3_japandi_zen/: prompt.md
dataset/4_tech_savvy/: prompt.md
dataset/5_warm_mediterranean/: prompt.md
prompts/: eval.jinja  img_gen.jinja
src/: graph.py  log.py  main.py  models.py  service.py  settings.py
tests/: conftest.py  test_app.py  test_graph.py  test_models.py  test_utils.py
